[package]
name = "teachable_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []

[dependencies]
borsh = { version = "1.4.0", features = ["derive"] }
solana-program = "=1.17.32"

[lib]
name = "teachable01"
crate-type = ["cdylib", "rlib"]

